Fix “content area scrolling separately from page” bug on mobile.

--- a/frontend/src/containers/App.module.css
+++ b/frontend/src/containers/App.module.css
@@ -98,6 +98,10 @@
     flex-direction: column;
   }
 
+  .contentWrapper {
+    overflow: visible; /* scroll whole page when on mobile */
+  }
+
   .nav {
     padding: 0;
   }
